# MandelbrotZoom

./: .gitignore  CMakeLists.txt  README.md
examples/: example1.json
include/mandelbrot/: Mandelbrot.h  MandelbrotCPU.h  MandelbrotGPU.h  MandelbrotZoom.h  types.h
include/utils/: BlockingQueue.h  GIFWriter.h  ImageWriter.h  PNGWriter.h  Palette.h  SharedVector.h
src/: main.cpp
src/mandelbrot/: Mandelbrot.cpp  MandelbrotCPU.cpp  MandelbrotGPU.cpp  MandelbrotGPU.cu  MandelbrotZoom.cpp
src/utils/: GIFWriter.cpp  PNGWriter.cpp  Palette.cpp
